<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLE无线控制器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    
            <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">透传接收:</string>
    <string name="label_device_address">MAC地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">已连接设备</string>
    <string name="connecting">连接中....</string>
    <string name="disconnected">断开连接</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="TXD">发送数据:</string>
    
        <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>
    
     <string name="menu_set">设置</string>
     <string name="menu_set1">扫描</string>
      
    <string name="menu_save">保存</string>
    
        <string name="net_desc">YOBO为你解决以下问题：想听歌不知道听什么,工作忙没空听歌,对着搜索引擎不知道听什么歌</string>
    <string name="helps_yobo">Yobo是中国最有特色的在线音乐服务提供商，其结合Last.fm和Pandora的特点，按照中国用户的习惯，加入诸多新的元素，使得其成为	众多音乐爱好者离不开的网站.
</string>
   <string name="helps_text">本软件是使用YoboAPI专为Android手机用户开发的客户端，使得其可以在手机上随时随地的收听你在Yobo上音乐盒、电台或者Yobo系统的一些榜单；更多功能，不断开发中.
</string>

</resources>
