<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="14sp"/>
        
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="14sp"/>
       
        <TextView android:id="@+id/connection_state"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="14sp"/>


            
    </LinearLayout>
    
    
    
    
    
    
<LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#99ccff"
                  android:layout_margin="5dp"
                  >
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- 
        <Button android:id="@+id/password_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码关"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            /> -->
        <TextView android:id="@+id/new_pass_txt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Name："
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            
            />
        <EditText android:id="@+id/switch_new_pass_value"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="123456"
            android:textColor="#0000ff"
            android:textSize="14dp"
            android:layout_marginTop="1dp"
            android:textCursorDrawable="@null"
            android:background="@null"
            
             
            />
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_password_write"
            android:text="更改设备名"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            />
         
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#99ccff"
                  android:layout_margin="5dp"
                  >
    </LinearLayout>
    
    
    
    
    
    
    
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        >
        <TextView android:id="@+id/tx"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:text="@string/TXD"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_margin="10dp"/>
        
             <EditText
            android:id="@+id/tx_text"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="2dp"
            android:textSize="14sp"
            android:visibility="invisible"
            >
        </EditText>      
    </LinearLayout>
    

    
    
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp">
           <Button android:id="@+id/tx_button"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:text="发送"
            android:textSize="10sp"

            android:visibility="invisible"
            />
           

           
    </LinearLayout>

     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         >
           
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp"
         >
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="10dp"
                 android:text="开关1" />
             

             <ImageButton
                 android:id="@+id/imageButton1"
                 android:layout_width="80dp"
                 android:layout_height="70dp"
                 android:src="@drawable/switch_off"
                 android:background="#00000000"
                  />
                          <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="开关2"
                 android:textSize="10dp" 
                 android:layout_marginLeft="10dp"
                 
                 />
             
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="80dp"
                 android:layout_height="70dp"
                 android:src="@drawable/switch_off"
                 android:background="#00000000"
                  />
             
             
</LinearLayout>
             

        
     </LinearLayout>

     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
         <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
         >
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="10dp"
                 android:text="开关3" />
             
             <ImageButton
                 android:id="@+id/imageButton3"
                 android:layout_width="80dp"
                 android:layout_height="70dp"
                 android:src="@drawable/switch_off" 
                 android:background="#00000000"
                 />
                          
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="开关4"
                 android:textSize="10dp" 
                 android:layout_marginLeft="10dp"
                 />
            
             <ImageButton
                 android:id="@+id/imageButton4"
                 android:layout_width="80dp"
                 android:layout_height="70dp"
                 android:src="@drawable/switch_off" 
                 android:background="#00000000"
                 />
</LinearLayout>

         

     </LinearLayout>
    
     
    <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
         android:visibility="invisible"
         >
                  <TextView
                 android:id="@+id/textView_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="旧密码："
                 android:textSize="10dp" 
                 android:layout_marginLeft="10dp"
                 />

                  <EditText
                      android:id="@+id/old_password"
                      android:layout_width="89dp"
                      android:layout_height="wrap_content"
                      
                      android:inputType="number" >

                      <requestFocus />
                  </EditText>
                  
                  
             <TextView
                 android:id="@+id/textView_pass2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="新密码："
                 android:textSize="10dp" 
                 android:layout_marginLeft="30dp"
                 />

                  <EditText
                      android:id="@+id/new_password"
                      android:layout_width="89dp"
                      android:layout_height="wrap_content"
                      
                      android:inputType="number" >

                      <requestFocus />
                  </EditText>
                  
     
     </LinearLayout>

     


              <TextView
                  android:id="@+id/switch_status_txt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="" />
     
</LinearLayout>